--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "directories": {
     "example": "example"
   },
-  "main": "lib/index.js",
+  "bin": "lib/ctj.js",
   "scripts": {
     "lint": "standard \"src/**/*.js\"",
     "babel": "babel src -d lib --copy-files"
@@ -29,7 +29,8 @@
     "colors": "^1.1.2",
     "commander": "^2.11.0",
     "progress": "^2.0.0",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "xmldoc": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
