--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,6 @@
         "browsers": ["last 2 versions", "safari >= 7"]
       }
     }]
-  ]
+  ],
+  "plugins": ["syntax-dynamic-import", "dynamic-import-node"]
 }
